--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,8 +9,8 @@
     --main-font-family: "Public Sans", Helvetica, Arial, sans-serif;
     --alt-font-family: "Roboto", Helvetica, Arial, sans-serif;
   
-   /* sizes 94,         24,18,14*/
-    --h1-font-size: min(max(47px, 6.5vw), 188px);
+   /* sizes 80,         24,18,14*/
+    --h1-font-size: min(max(40px, 5.56vw), 160px);
     --h2-font-size: min(max(24px, 2.5vw), 96px);
     --h3-font-size: min(max(20px, 1.875vw), 72px);
   
@@ -37,6 +37,9 @@ h1{
     line-height: 1.17;
     letter-spacing: -0.05em;
 }
+html{
+    scroll-behavior: smooth;
+}
 
 body{
     color: #FFFFFF;
@@ -44,6 +47,10 @@ body{
     font-weight: 500;
 }
 
+.navbar{
+    position: absolute;
+    width: 100%;
+}
 
 .navbar-nav .nav-item:nth-of-type(2n+1){
     margin-right: -9vw;
@@ -53,7 +60,7 @@ body{
     color: #FFFFFF;
     font-family: var(--alt-font-family);
     font-size: var(--link-text);
-    padding: 6vh 4vw;
+    padding: 5vh 4vw;
 }
 
 .btn{
@@ -178,38 +185,4 @@ label{
 
 
 
-.pro-header{
-    background-image: url(../img/homeBg.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    }
 
-.hero-container{
-    padding:  4.5vh 0 23.85vh;
-}
-.hero-title{
-    font-weight: 800;
-    margin-bottom:9.5vh;
-}
-
-.hero-title span{
-    color: var(--secondary-color)
-}
-
-
-.signup{
-    padding: 12vh 11vw 14.8vh;
-    background-color: var(--primary-color);
-}
-
-.form-block{
-    max-width: 26.875vw;
-}
-
-.info-block{
-    max-width: 39.6vw;
-}
-
-.signup-title{
-    font-weight: 700;
-}
