--- a/assets/css/sme.css
+++ b/assets/css/sme.css
@@ -34,6 +34,7 @@
 
 .form-block{
     max-width: 26.875vw;
+    min-width: 250px;
 }
 
 .info-block{
@@ -90,6 +91,7 @@
     width: 100%;
     height: 100%;
     z-index: -1;
+    overflow: hidden;
 }
 
 .text-span{
@@ -104,58 +106,83 @@ white-space: nowrap;
 .text-span:nth-of-type(1){
     left: 3.47vw;
 top: 8.5vh;
-font-size: 6.67vw ;
+font-size: max(6.67vw,72px) ;
 }
 
 .text-span:nth-of-type(2){
     left: 44.3vw;
     top: 4.4vh;
-font-size: 10vw ;
+font-size: max(10vw,72px) ;
 }
 
 .text-span:nth-of-type(3){
     left: 2.08vw;
     top: 22vh;
-    font-size: 6.67vw ;
+    font-size: max(6.67vw,72px) ;
 }
 
 .text-span:nth-of-type(4){
     left: 66.4vw;
 top: 27vh;
-font-size: 5vw ;
+font-size: max(5vw,64px) ;
 }
 
 .text-span:nth-of-type(5){
     left: 55.97vw;
 top: 46vh;
-font-size: 3.33vw ;
+font-size: max(3.33vw,48px) ;
 }
 .text-span:nth-of-type(6){
     left: 2vw;
 top: 67vh;
-font-size: 4.44vw ;
+font-size: max(4.44vw, 54px) ;
 }
 
 .text-span:nth-of-type(7){
     left: 47.85vw;
 top: 58vh;
-font-size: 6.67vw ;
+font-size: max(6.67vw, 72px) ;
 }
 
 .text-span:nth-of-type(8){
 left: 50.34vw;
 top: 74vh;
-font-size: 5vw ;
+font-size: max(5vw,64px) ;
 }
 
 .text-span:nth-of-type(9){
     left: 9.17vw;
     top: 82vh;
-    font-size: 10vw ;
+    font-size: max(10vw, 72px ) ;
     }
 
 .text-span:nth-of-type(10){
     left: 74.09vw;
     top: 86vh;
-    font-size: 5vw ;
+    font-size: max(5vw,64px) ;
     }
+
+
+    /*  Extra small devices (portrait phones, less than 576px) */
+@media (max-width: 767.98px) { 
+    .form-block,
+    .info-block{
+        max-width: unset;
+        margin: 3vh 0;
+        min-width: unset;
+    }
+
+
+    label{
+        white-space: unset;
+    }
+
+    .signup {
+        padding: 5vh 11vw 11.8vh;
+    }
+
+    .signup-title{
+        margin-bottom: 2vh;
+    }
+
+}
