--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -188,7 +188,7 @@ label{
     left: 0;
     width: 100%;
     display: flex;
-    height: 1.9vh
+    height: 1.5vh
 }
 .footer-strip>span{
     display: block;
@@ -205,6 +205,10 @@ label{
     background-color: var(--maroon-color);
 }
 
+.wow {
+    visibility: hidden;
+  }
+  
 
 
 
