fix offest of signup button

--- a/assets/css/professionals.css
+++ b/assets/css/professionals.css
@@ -9,6 +9,7 @@
     max-height: 1080px;
     color: #FFFFFF;
     background-position: center;
+    background-color: gray;
     }
 
 .hero-container{
